<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:screenOrientation="portrait"
    android:theme="@style/ThemeOverlay.Sondas.FullscreenContainer"
    tools:context="com.example.fuelkontrol.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageViewTanque"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_marginHorizontal="15dp"
            android:src="@drawable/bg_fuel_kontrol"></ImageView>

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_borde_button"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/purple_700"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtContra"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:background="@drawable/stylo_borde_button"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/purple_700"
            android:textIsSelectable="true"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsuario"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white" />

        <ImageButton
            android:id="@+id/showPassword"
            android:layout_width="35sp"
            android:layout_height="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="500dp"
        android:gravity="left"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btnLeer"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="Acceso con huella digital"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swOnOff"
            android:layout_width="100sp"
            android:layout_height="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15sp"
            android:thumb="@drawable/custom_thumb"
            app:track="@drawable/custom_track" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/cmbRecordar"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="25dp"
            android:text="@string/recordar_password"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="220sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/stylo_borde_editext"
                android:text="@string/ingresar"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>