<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fuelkontrol.activity.InsertarPapeletaActivity">

    <TextView
        android:id="@+id/txtMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginRight="8sp"
        android:background="@drawable/stylo_borde_editext"
        android:text="@string/ingresarPapeleta"
        android:textColor="@color/purple_700"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtMostrar"
        app:layout_constraintVertical_bias="2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/btnConfigurar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:layout_marginTop="-15dp"
        android:text="Insertar vale"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        app:layout_constraintVertical_bias="1"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtEmpresa"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="Empresa"
        android:text="01"
        android:clickable="false"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="text"
        android:maxLength="49"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtAutobus"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="Autobus"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtOperador1"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="Operador"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtOperador2"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="Operador 2"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtOficina"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="Oficina"
        android:text="01"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="text"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtPapeleta"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="350dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="1234567890"
        android:hint="Papeleta"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />



    <EditText
        android:id="@+id/edtKilometros"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="400dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="1234567890"
        android:hint="@string/Kilometros"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtLitros"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginTop="450dp"
        android:layout_marginHorizontal="15sp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="1234567890"
        android:hint="@string/litros"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtObservaciones"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="520dp"
        android:background="@drawable/stylo_borde_editext"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        android:hint="Observaciones"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:inputType="textEmailSubject"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/purple_700"
        android:textColorLink="#009688"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnConfigurar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnInsertarPapeleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/stylo_borde_editext"
        android:enabled="false"
        android:text="@string/ingresarPapeleta"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>